--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Akhir Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img./juancok.png" alt="Juan Haniful Kahfi" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img./juancok.PNG" alt="Juan Haniful Kahfi" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Juan Haniful Kahfi</h1>
       <p class="lead">Information System Student | System Analyst | Front End Developer</p>
       <p class="lead">
@@ -102,7 +102,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img./projects./gambar1.png" class="card-img-top" alt="projects1" />
+              <img src="img./projects./gambar1.PNG" class="card-img-top" alt="projects1" />
               <div class="card-body">
                 <p class="card-text">[Tugas] Analisa Sistem Web Informasi Bencana DKI Jakarta</p>
                 <a href="https://drive.google.com/file/d/1TzupXSJmyONfoFUUvK213weSKQuyVckx/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
@@ -111,7 +111,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img./projects./gambar2.png" class="card-img-top" alt="projects2" />
+              <img src="img./projects./gambar2.PNG" class="card-img-top" alt="projects2" />
               <div class="card-body">
                 <p class="card-text">[Real Project] Company Profile Website Elpassa Easy Moving Wordpress</p>
                 <a href="https://elpassamoving.com/" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
@@ -120,7 +120,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img./projects./gmbr3.png" class="card-img-top" alt="projects3" />
+              <img src="img./projects./gmbr3.PNG" class="card-img-top" alt="projects3" />
               <div class="card-body">
                 <p class="card-text">[Tugas] Website Pizzaria Bintaro with Application Programming Interface</p>
                 <a href="https://pizzaria-bintaro-lprgxuygk-juanhkahfis-projects.vercel.app/#" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
@@ -129,7 +129,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img./projects./gambar4.png" class="card-img-top" alt="projects4" />
+              <img src="img./projects./gambar4.PNG" class="card-img-top" alt="projects4" />
               <div class="card-body">
                 <p class="card-text">[Tugas] Cschedule - Website Informasi Matakuliah Sederhana UPJ dengan PHP</p>
                 <a href="https://drive.google.com/file/d/1tjGAu5n5RE2f3WG53L567hwTQl5fZlPr/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
@@ -138,7 +138,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img./projects./gmbr5.png" class="card-img-top" alt="projects5" />
+              <img src="img./projects./gmbr5.PNG" class="card-img-top" alt="projects5" />
               <div class="card-body">
                 <p class="card-text">[Tugas] UI & UX FIGMA | Tanamanku - Aplikasi Jual Beli Tanaman</p>
                 <a href="https://drive.google.com/file/d/1-bDcL-udn_YK6IbrYZOyyVwyVIIfPqg5/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
