--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Akhir Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="juancok.PNG" alt="Juan Haniful Kahfi" width="200" class="rounded-circle img-thumbnail" />
+      <img src="juancok.png" alt="Juan Haniful Kahfi" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Juan Haniful Kahfi</h1>
       <p class="lead">Information System Student | System Analyst | Front End Developer</p>
       <p class="lead">
