--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-md-4">
             <p>
               Saya mahasiswa S1 Program Studi Sistem Informasi yang ingin mengembangkan potensi dalam diri saya serta berdedikasi dan bersemangat dalam mengembangkan pengetahuan di bidang teknologi. Saya mempunyai potensi dalam bidang
-              System Analyst dan Front End Developer. Menguasai bahasa pemrograman HTML, CSS, dan Javascript. Saya merupakan pribadi yang memiliki rasa keingintahuan yang tinggi dan dapat bekerjasama dalam kelompok.
+              <b>System Analyst</b> dan <b>Front End Developer</b>. Menguasai bahasa pemrograman HTML, CSS, dan Javascript. Saya merupakan pribadi yang memiliki rasa keingintahuan yang tinggi dan dapat bekerjasama dalam kelompok.
             </p>
           </div>
           <div class="col-md-4">
