--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="col-md-4">
             <p>
-              Saya memiliki kemampuan dalam mengoperasikan Microsoft Visio dan Microsoft Office, serta Figma. Selain itu, saya memiliki pengetahuan dalam analisa bisnis dan
+              Kemampuan yang saya miliki yaitu mengoperasikan Microsoft Visio dan Microsoft Office, serta Figma. Selain itu, pengetahuan dalam analisa bisnis dan
               SDLC (Software Development Lifecycle), serta memahami Diagram UML seperti Use Case dan Spesifikasi, Activity Diagram, Class Diagram, dan Sequence Diagram. Saya juga menguasai persyaratan fungsional dan non-fungsional.
             </p>
           </div>
