--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <img src="img/projects/gmbr3.png" class="card-img-top" alt="projects3" />
               <div class="card-body">
                 <p class="card-text">[Tugas] Website Pizzaria Bintaro with Application Programming Interface</p>
-                <a href="https://pizzaria-bintaro-lprgxuygk-juanhkahfis-projects.vercel.app/#" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
+                <a href="https://juanhkahfi.github.io/pizzaria-bintaro/" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
               </div>
             </div>
           </div>
