--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           </div>
           <div class="col-md-4">
             <p>
-              Kemampuan yang saya miliki yaitu mengoperasikan Microsoft Visio dan Microsoft Office, serta Figma. Selain itu, pengetahuan dalam analisa bisnis dan
-              SDLC (Software Development Lifecycle), serta memahami Diagram UML seperti Use Case dan Spesifikasi, Activity Diagram, Class Diagram, dan Sequence Diagram. Saya juga menguasai persyaratan fungsional dan non-fungsional.
+              Kemampuan yang saya miliki yaitu mengoperasikan Microsoft Visio dan Microsoft Office, serta Figma. Selain itu, pengetahuan dalam analisa bisnis dan SDLC (Software Development Lifecycle), serta memahami Diagram UML seperti Use
+              Case dan Spesifikasi, Activity Diagram, Class Diagram, dan Sequence Diagram. Saya juga menguasai persyaratan fungsional dan non-fungsional.
             </p>
           </div>
         </div>
@@ -99,12 +99,12 @@
             <h2>My Projects</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/gambar1.png" class="card-img-top" alt="projects1" />
               <div class="card-body">
-                <p class="card-text">[Tugas] Analisa Sistem Web Informasi Bencana DKI Jakarta</p>
+                <p class="card-text">Analisa Sistem Website Informasi Bencana DKI Jakarta</p>
                 <a href="https://drive.google.com/file/d/1TzupXSJmyONfoFUUvK213weSKQuyVckx/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
               </div>
             </div>
@@ -113,7 +113,7 @@
             <div class="card">
               <img src="img/projects/gambar2.png" class="card-img-top" alt="projects2" />
               <div class="card-body">
-                <p class="card-text">[Real Project] Company Profile Website Elpassa Easy Moving Wordpress</p>
+                <p class="card-text">Company Profile Website Elpassa Easy Moving Wordpress</p>
                 <a href="https://elpassamoving.com/" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
               </div>
             </div>
@@ -122,7 +122,7 @@
             <div class="card">
               <img src="img/projects/gmbr3.png" class="card-img-top" alt="projects3" />
               <div class="card-body">
-                <p class="card-text">[Tugas] Website Pizzaria Bintaro with Application Programming Interface</p>
+                <p class="card-text">Website Pizzaria Bintaro with Local Application Programming Interface</p>
                 <a href="https://juanhkahfi.github.io/pizzaria-bintaro/" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
               </div>
             </div>
@@ -131,7 +131,7 @@
             <div class="card">
               <img src="img/projects/gambar4.png" class="card-img-top" alt="projects4" />
               <div class="card-body">
-                <p class="card-text">[Tugas] Cschedule - Website Informasi Matakuliah Sederhana UPJ dengan PHP</p>
+                <p class="card-text">Cschedule - Website Informasi Jadwal Matakuliah Kampus Sederhana dengan PHP Programming Language</p>
                 <a href="https://drive.google.com/file/d/1tjGAu5n5RE2f3WG53L567hwTQl5fZlPr/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
               </div>
             </div>
@@ -140,8 +140,17 @@
             <div class="card">
               <img src="img/projects/gmbr5.png" class="card-img-top" alt="projects5" />
               <div class="card-body">
-                <p class="card-text">[Tugas] UI & UX FIGMA | Tanamanku - Aplikasi Jual Beli Tanaman</p>
+                <p class="card-text">UI & UX FIGMA Tanamanku - Aplikasi Jual Beli Tanaman</p>
                 <a href="https://drive.google.com/file/d/1-bDcL-udn_YK6IbrYZOyyVwyVIIfPqg5/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/gambar6.png" class="card-img-top" alt="projects5" />
+              <div class="card-body">
+                <p class="card-text">Analisa Proses Bisnis dan Implementasi Testing pada Website Sistem Informasi Perpustakaan Kampus XYZ menggunakan metode White Box & Black Box</p>
+                <a href="https://drive.google.com/file/d/1pzFfC4fzilXxy_RZ7bdhd6TYxbmzYSd3/view?usp=sharing" target="_blank" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Preview</a>
               </div>
             </div>
           </div>
