--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio | Juan Haniful Kahfi</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/portfolio/img/smile.ico" />
     <!-- Boostrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- Boostrap Akhir CSS -->
@@ -47,8 +49,8 @@
       <h1 class="display-4">Juan Haniful Kahfi</h1>
       <p class="lead">Information System Student | System Analyst | Front End Developer</p>
       <p class="lead">
-        <a href="https://www.linkedin.com/in/juanhkahfi/" target="_blank" role="button"><i class="bi bi-linkedin"></i></a> |
-        <a href="https://github.com/juanhkahfi/" target="_blank" role="button"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/juanhkahfi/" target="_blank" role="button"><i class="bi bi-linkedin"></i></a> | <a href="https://github.com/juanhkahfi/" target="_blank" role="button"><i class="bi bi-github"></i></a> |
+        <a href="mailto:juanhkahfi10@gmail.com" target="_blank" role="button"><i class="bi bi-envelope-at-fill"></i></a>
       </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
